--- a/ExcangeRate/Base.lproj/Main.storyboard
+++ b/ExcangeRate/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
         <!--Exchangelist View Controller-->
         <scene sceneID="wm4-9s-GUa">
             <objects>
-                <tableViewController id="Kg0-wt-z1N" customClass="ExchangeListViewController" customModule="ExcangeRate" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="ExchangeListViewController" id="Kg0-wt-z1N" customClass="ExchangeListViewController" customModule="ExcangeRate" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="sBl-Qf-DAA">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
