--- a/ExcangeRate/Base.lproj/Main.storyboard
+++ b/ExcangeRate/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Yyv-lo-v9y">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Jgk-FP-FAe">
     <device id="retina6_1" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -11,50 +11,55 @@
     </dependencies>
     <scenes>
         <!--Exchangelist View Controller-->
-        <scene sceneID="wm4-9s-GUa">
+        <scene sceneID="qSZ-DP-duU">
             <objects>
-                <tableViewController storyboardIdentifier="ExchangeListViewController" id="Kg0-wt-z1N" customClass="ExchangeListViewController" customModule="ExcangeRate" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="sBl-Qf-DAA">
+                <viewController id="QgX-lJ-YH4" customClass="ExchangeListViewController" customModule="ExcangeRate" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="FCb-Ml-PIf">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="d6n-T1-pow">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="Ezg-7I-TFZ">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Ezg-7I-TFZ" id="7zR-dc-Cgz">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="QgX-lJ-YH4" id="JTI-i1-9k3"/>
+                                    <outlet property="delegate" destination="QgX-lJ-YH4" id="pUX-Ov-dHf"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <view key="tableHeaderView" contentMode="scaleToFill" id="8aR-sv-lU7">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        </view>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="CmG-9A-1Kf">
-                                <rect key="frame" x="0.0" y="72" width="414" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="CmG-9A-1Kf" id="raE-R2-baJ">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="Kg0-wt-z1N" id="4K0-Gf-Wwi"/>
-                            <outlet property="delegate" destination="Kg0-wt-z1N" id="Sqx-4Q-Yuy"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" id="yrP-9O-Wty"/>
-                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="RrK-sE-uDl">
-                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </refreshControl>
+                        <constraints>
+                            <constraint firstItem="d6n-T1-pow" firstAttribute="leading" secondItem="i7w-7H-HrO" secondAttribute="leading" id="1yV-qd-5lZ"/>
+                            <constraint firstItem="i7w-7H-HrO" firstAttribute="trailing" secondItem="d6n-T1-pow" secondAttribute="trailing" id="oVX-zg-YDc"/>
+                            <constraint firstItem="i7w-7H-HrO" firstAttribute="bottom" secondItem="d6n-T1-pow" secondAttribute="bottom" id="w8C-gH-MLt"/>
+                            <constraint firstItem="d6n-T1-pow" firstAttribute="top" secondItem="i7w-7H-HrO" secondAttribute="top" id="ziE-o1-aFM"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="i7w-7H-HrO"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="fH8-M7-kCu"/>
                     <connections>
-                        <segue destination="L9l-rK-VbD" kind="show" identifier="details" id="mpr-T5-kzQ"/>
+                        <outlet property="tableView" destination="d6n-T1-pow" id="3bN-HD-0Rm"/>
+                        <segue destination="L9l-rK-VbD" kind="show" identifier="details" id="FNc-hI-Dd7"/>
                     </connections>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="P6d-aS-S4a" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <customObject id="2G5-zw-UEe" customClass="ExchangeListModuleInitializer" customModule="ExcangeRate" customModuleProvider="target">
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="p73-9t-0um" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <customObject id="PLo-dI-ksT" customClass="ExchangeListModuleInitializer" customModule="ExcangeRate" customModuleProvider="target">
                     <connections>
-                        <outlet property="exchangelistViewController" destination="Kg0-wt-z1N" id="ntd-eD-erk"/>
+                        <outlet property="exchangelistViewController" destination="QgX-lJ-YH4" id="X2V-pp-AOj"/>
                     </connections>
                 </customObject>
             </objects>
-            <point key="canvasLocation" x="757.97101449275374" y="-6.0267857142857144"/>
+            <point key="canvasLocation" x="1653.6231884057972" y="-18.080357142857142"/>
         </scene>
         <!--Exchangedetails View Controller-->
         <scene sceneID="ixz-78-Smb">
@@ -103,25 +108,25 @@
                     </connections>
                 </customObject>
             </objects>
-            <point key="canvasLocation" x="1697.1014492753625" y="-6.0267857142857144"/>
+            <point key="canvasLocation" x="2607.2463768115945" y="-6.0267857142857144"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="1l9-P3-gj3">
+        <scene sceneID="Vrb-hL-QVs">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Yyv-lo-v9y" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Jgk-FP-FAe" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="OOb-2c-7AU">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Zv9-Vm-iY6">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="Kg0-wt-z1N" kind="relationship" relationship="rootViewController" id="3ew-dm-azL"/>
+                        <segue destination="QgX-lJ-YH4" kind="relationship" relationship="rootViewController" id="Isn-0Q-fS2"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="evv-d6-hsO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6Gr-UG-csQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-152.17391304347828" y="-6.0267857142857144"/>
+            <point key="canvasLocation" x="743.47826086956525" y="-18.080357142857142"/>
         </scene>
     </scenes>
 </document>
